# lambkin

./: .dockerignore  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Earthfile  README.md  docker-bake.hcl
src/benchmarks/beluga_vs_nav2/: CMakeLists.txt  Dockerfile  Earthfile  README.md  package.xml
src/benchmarks/beluga_vs_nav2/.devcontainer/: devcontainer.json
src/benchmarks/beluga_vs_nav2/config/: amcl_params.yml  hallway_localization.yml  hallway_return.yml  qos_override.yaml
src/benchmarks/beluga_vs_nav2/launch/: beluga_amcl.launch  beluga_vs_nav2.launch  nav2_amcl.launch
src/benchmarks/beluga_vs_nav2/params/: amcl.yaml
src/benchmarks/beluga_vs_nav2/scripts/: beluga_vs_nav2.robot  misc.resource  ndt_swept.robot  nominal.robot  swept.robot
src/benchmarks/beluga_vs_nav2_multi_dataset/: CMakeLists.txt  Earthfile  README.md  package.xml
src/benchmarks/beluga_vs_nav2_multi_dataset/.devcontainer/: devcontainer.json  docker-compose.yml
src/benchmarks/beluga_vs_nav2_multi_dataset/config/: qos_override.yml
src/benchmarks/beluga_vs_nav2_multi_dataset/launch/: beluga_vs_nav2_multi_dataset.launch
src/benchmarks/beluga_vs_nav2_multi_dataset/scripts/: nominal.robot
src/benchmarks/beluga_vs_nav2_unmapped_areas/: CMakeLists.txt  Earthfile  README.md  package.xml
src/benchmarks/beluga_vs_nav2_unmapped_areas/launch/: beluga_vs_nav2_unmapped_areas.launch
src/benchmarks/beluga_vs_nav2_unmapped_areas/scripts/: nominal.robot
src/benchmarks/cartographer_ros_benchmark/: CMakeLists.txt  Dockerfile  package.xml  setup.py
src/benchmarks/cartographer_ros_benchmark/config/: magazino_benchmark.lua  magazino_report.rst  mars_benchmark.lua  rawseeds_benchmark.lua  rawseeds_report.rst  tum_benchmark.lua  tum_report.rst
src/benchmarks/cartographer_ros_benchmark/docker/: Makefile  run
src/benchmarks/cartographer_ros_benchmark/launch/: magazino_benchmark.launch  mars_benchmark.launch  rawseeds_benchmark.launch  tum_benchmark.launch
src/benchmarks/cartographer_ros_benchmark/scripts/: magazino_benchmark.robot  mars_benchmark.robot  rawseeds_benchmark.robot  tum_benchmark.robot
src/benchmarks/cartographer_ros_benchmarks/: CMakeLists.txt  Dockerfile  Earthfile  README.md  package.xml
src/benchmarks/cartographer_ros_benchmarks/.devcontainer/: devcontainer.json  docker-compose.yml
src/benchmarks/cartographer_ros_benchmarks/launch/: magazino_benchmark.launch  mars_benchmark.launch  rawseeds_benchmark.launch  tum_benchmark.launch
src/benchmarks/cartographer_ros_benchmarks/scripts/: magazino_benchmark.robot  mars_benchmark.robot  rawseeds_benchmark.robot  tum_benchmark.robot
src/benchmarks/rtabmap_benchmark/: CMakeLists.txt  Dockerfile  package.xml
src/benchmarks/rtabmap_benchmark/launch/: tum_benchmark.launch
src/benchmarks/rtabmap_benchmark/scripts/: tum_benchmark.robot
src/benchmarks/slam_toolbox_benchmark/: CMakeLists.txt  Dockerfile  package.xml  setup.py
src/benchmarks/slam_toolbox_benchmark/.devcontainer/: devcontainer.json
src/benchmarks/slam_toolbox_benchmark/config/: magazino_report.rst  mars_benchmark.yaml  rawseeds_report.rst  tum_report.rst
src/benchmarks/slam_toolbox_benchmark/docker/: Makefile  run
src/benchmarks/slam_toolbox_benchmark/launch/: magazino_benchmark.launch  mars_benchmark.launch  parametric_benchmark.launch  parametric_tum_benchmark.launch  rawseeds_benchmark.launch  tum_benchmark.launch
src/benchmarks/slam_toolbox_benchmark/scripts/: magazino_benchmark.robot  mars_benchmark.robot  parametric_benchmark.robot  parametric_tum_benchmark.robot  rawseeds_benchmark.robot  tum_benchmark.robot
src/benchmarks/slam_toolbox_benchmarks/: CMakeLists.txt  Dockerfile  Earthfile  README.md  package.xml
src/benchmarks/slam_toolbox_benchmarks/.devcontainer/: devcontainer.json  docker-compose.yml
src/benchmarks/slam_toolbox_benchmarks/config/: magazino_benchmark.yaml  rawseeds_benchmark.yaml  tum_benchmark.yaml
src/benchmarks/slam_toolbox_benchmarks/launch/: magazino_benchmark.launch  mars_benchmark.launch  parametric_tum_benchmark.launch  rawseeds_benchmark.launch  tum_benchmark.launch
src/benchmarks/slam_toolbox_benchmarks/scripts/: magazino_benchmark.robot  mars_benchmark.robot  parametric_tum_benchmark.robot  rawseeds_benchmark.robot  tum_benchmark.robot
src/core/lambkin/: .gitignore  CMakeLists.txt  package.xml  pyproject.toml  setup.cfg  setup.py  tox.ini
src/core/lambkin-clerk/: Earthfile  README.md  pyproject.toml  tox.ini
src/core/lambkin-clerk/docs/: .gitignore  README.md  api.rst  conf.py  index.rst  overview.rst
src/core/lambkin-clerk/test/: requirements.txt  test_ros2.py  utilities.py
src/core/lambkin-shepherd/: .dockerignore  .gitignore  Earthfile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/core/lambkin-shepherd/.devcontainer/: devcontainer.json
src/core/lambkin-shepherd/docs/: Makefile  README.md  api.rst  conf.py  index.rst  overview.rst
src/core/lambkin-shepherd/test/: requirements.txt  test_utilities.py
src/core/lambkin/docker/: Makefile
src/core/lambkin/src/: lambkin.resource
src/core/lambkin/test/: requirements.txt  test_utilities.py
src/tools/bag2map/: CMakeLists.txt  README.md  package.xml  setup.py
src/tools/bag2map/config/: map_generation_config.yaml
src/tools/bag2map/launch/: generate_map.launch
src/tools/bag2map/scripts/: bag2map  mapping_orchestrator_node  mapping_orchestrator_node.py
src/tools/cartographer_tools/: CMakeLists.txt  Dockerfile  README.md  package.xml
src/tools/cartographer_tools/.devcontainer/: devcontainer.json
src/tools/cartographer_tools/configuration_files/: assets_writer_ply.lua  narrow_spaces_2d.lua
src/tools/cartographer_tools/src/: pbstream_to_tum_trajectory_main.cpp
src/tools/nclt2bag/: CMakeLists.txt  README.md  package.xml
src/tools/nclt2bag/scripts/: nclt2bag
src/tools/rawlog2bag/: CMakeLists.txt  README.md  package.xml
src/tools/rawlog2bag/src/: cli.cpp  conversions.cpp  groundtruth_stream.cpp  junction_stream.cpp  (+1 more)
src/tools/rawseeds2bag/: CMakeLists.txt  README.md  package.xml
(+250 files in other folders)
