<?xml version="1.0"?>
<package format="2">
  <name>beluga_vs_nav2</name>
  <version>1.0.0</version>
  <description>LAMBKIN powered benchmarks for comparing beluga AMCL to Nav2 AMCL.</description>

  <maintainer email="serraramiro@ekumenlabs.com">Ramiro Serra</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>beluga_amcl</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
