<?xml version="1.0"?>
<package format="2">
  <name>cartographer_ros_benchmarks</name>
  <version>0.1.0</version>
  <description>LAMBKIN powered benchmarks for Cartographer ROS</description>

  <maintainer email="leonardoneumarkt@ekumenlabs.com">Leonardo Neumarkt</maintainer>
  <maintainer email="nespinosa@ekumenlabs.com">Nahuel Espinosa</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>lambkin-shepherd</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <!-- <exec_depend>cartographer_ros</exec_depend> -->
  <exec_depend>tf2_tools</exec_depend>
</package>
