<?xml version="1.0"?>
<package format="2">
  <name>lambkin</name>
  <version>0.1.0</version>
  <description>Localization And Mapping Benchmarking Toolkit</description>

  <maintainer email="leonardoneumarkt@ekumenlabs.com">Leonardo Neumarkt</maintainer>
  <maintainer email="nespinosa@ekumenlabs.com">Nahuel Espinosa</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-seaborn</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
</package>
