<?xml version="1.0"?>
<package format="2">
  <name>nclt2bag</name>
  <version>0.1.0</version>
  <description>Conversion tools for NCLT datasets</description>

  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
