<?xml version="1.0"?>
<package format="2">
  <name>rawlog2bag</name>
  <version>0.1.0</version>
  <description>Conversion tools for MRPT Rawlog files</description>

  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>mrpt2</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
</package>
